--- a/index.css
+++ b/index.css
@@ -9,7 +9,6 @@
 body{
     background-color: black;
     margin: 20px;
-    min-width: 600px;
 }
 h2{font-size: 36px;
 }
@@ -40,13 +39,46 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 99;
 }
-header ul{
-    list-style: none;
+#menu, #list-menu{
+    display: none;
+}
+@media (max-width: 700px) {
+    header ul{
+        display: none;
+    }
+    #list-menu{
+        position: fixed;
+        top: 69px;
+        right: 0px;
+        background-color: black;
+        padding: 22px 30px;
+        z-index: 100;
+        opacity: 0.9;
+    }
+    #list-menu ul{
+        line-height: 2;
+        list-style: none;
+    }
+    #list-menu li{
+        border-bottom: 1px seashell solid;
+    }
+    #list-menu a{
+        text-decoration: none;
+    }
+    #menu{
+        display: block;
+        margin-right: 30px;
+        font-size: 30px;
+    }
 }
 header li{
     display: inline;
     margin-right: 30px;
+}
+header ul{
+    list-style: none;
 }
 .logo{
     height: 50px;
