--- a/index.css
+++ b/index.css
@@ -126,7 +126,7 @@ figcaption {
     justify-content: center;
     align-items: center;
     gap: 30px;
-    margin: auto;
+    margin: 30px auto;
 }
 
 /*Locations */
