--- a/index.css
+++ b/index.css
@@ -4,11 +4,15 @@
     margin: 0;
     padding: 0;
     font-size: 22px;
+    box-sizing: border-box;
 }
 
 body{
     background-color: black;
     margin: 20px;
+}
+main{
+    margin-top: 69px;
 }
 h2{font-size: 36px;
 }
@@ -31,9 +35,11 @@ p{
 .bg-black{background-color: black;}
 /* Header */
 header{
+    padding: 10px;
     height: 69px;
     border-bottom: 1px solid seashell;
-    position: sticky;
+    position: fixed ;
+    width: 100%;
     top:0px;
     background-color: rgba(0, 0, 0, 0.9);
     display: flex;
